大纲bug和上传章节bug

--- a/teacher/gang/gang.files/sheet001.htm
+++ b/teacher/gang/gang.files/sheet001.htm
@@ -56,9 +56,8 @@ else
 <![endif]>
 </head>
 
-<body link=blue vlink=purple class=xl65>
-
-<table border=0 cellpadding=0 cellspacing=0 width=1048 style='border-collapse:
+<body link=blue vlink=purple class=xl65 >
+<table  border=0 cellpadding=0 cellspacing=0 style="width:100%;" style='border-collapse:
  collapse;table-layout:fixed;width:786pt'>
  <col class=xl65 width=60 style='mso-width-source:userset;mso-width-alt:1920;
  width:45pt'>
@@ -2719,7 +2718,6 @@ else
  </tr>
  <![endif]>
 </table>
-
 </body>
 
 </html>
