--- a/teacher/gang/gang.htm
+++ b/teacher/gang/gang.htm
@@ -314,8 +314,8 @@ function fnSetActiveSheet(iSh)
 </head>
 
 <frameset rows="*,39" border=0 width=0 frameborder=no framespacing=0>
- <frame src="gang.files/sheet001.htm" name="frSheet">
- <frame src="gang.files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
+ <frame src="gang.files/sheet001.htm"  name="frSheet"  frameborder="0"/>
+ <!-- <frame src="gang.files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0 scrolling="no" frameborder="0" /> -->
  <noframes>
   <body>
    <p>此页面使用了框架，而您的浏览器不支持框架。</p>
